[package]
name = "ctoml"
version = "0.1.0"
edition = "2021"
description = "A command-line tool to manipulate TOML files"
license = "MIT"
repository = "https://github.com/sociation/ctoml"

[dependencies]
toml = "0.8.14"
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.2"

[[bin]]
name = "ctoml"
path = "src/main.rs"